--- a/Cost Track/Cost Track/Views/XIBs/ViewControllers/AccountingPeriodViewController.xib
+++ b/Cost Track/Cost Track/Views/XIBs/ViewControllers/AccountingPeriodViewController.xib
@@ -23,7 +23,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RdC-wt-Ofz">
-                    <rect key="frame" x="0.0" y="0.0" width="410" height="44"/>
+                    <rect key="frame" x="0.0" y="10" width="410" height="44"/>
                     <color key="backgroundColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="Px8-sU-zAe"/>
@@ -46,7 +46,7 @@
                     </items>
                 </navigationBar>
                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="RAT-MG-Svr">
-                    <rect key="frame" x="10.5" y="64" width="389.5" height="29"/>
+                    <rect key="frame" x="10.5" y="74" width="389.5" height="29"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="28" id="iVq-1Q-Ozm"/>
                     </constraints>
@@ -63,7 +63,7 @@
                     </connections>
                 </segmentedControl>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="0Zr-3X-cAp">
-                    <rect key="frame" x="10.5" y="100" width="389.5" height="65"/>
+                    <rect key="frame" x="10.5" y="110" width="389.5" height="65"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="65" id="85R-Qf-Osa"/>
@@ -74,8 +74,13 @@
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Zky-GC-5kt">
-                    <rect key="frame" x="0.0" y="175" width="410" height="123"/>
+                    <rect key="frame" x="0.0" y="185" width="410" height="113"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="10"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="Asp-ba-aYO"/>
                         <outlet property="delegate" destination="-1" id="eRP-Yh-tzY"/>
@@ -96,7 +101,7 @@
                 <constraint firstItem="RdC-wt-Ofz" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="ryA-Sf-Tia"/>
                 <constraint firstItem="0Zr-3X-cAp" firstAttribute="top" secondItem="RAT-MG-Svr" secondAttribute="bottom" constant="8" id="tMo-8e-e31"/>
                 <constraint firstItem="Zky-GC-5kt" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="vUx-MW-Y8m"/>
-                <constraint firstItem="RdC-wt-Ofz" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="yJ8-hX-Tov"/>
+                <constraint firstItem="RdC-wt-Ofz" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="10" id="yJ8-hX-Tov"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
