--- a/Cost Track/Cost Track/Views/XIBs/ViewControllers/AccountingPeriodViewController.xib
+++ b/Cost Track/Cost Track/Views/XIBs/ViewControllers/AccountingPeriodViewController.xib
@@ -62,7 +62,7 @@
                         <action selector="segmentedControlValueChanged:" destination="-1" eventType="valueChanged" id="NO9-SZ-D9P"/>
                     </connections>
                 </segmentedControl>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Zr-3X-cAp">
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Zr-3X-cAp">
                     <rect key="frame" x="10.5" y="110" width="389.5" height="65"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
